--- a/blogs/style.css
+++ b/blogs/style.css
@@ -65,7 +65,7 @@ h1 {
   margin-top: 10px;
   display: inline-block;
   align-self: center;
-  text-align: center;
+  text-align: left;
 }
 
 .btn-call {
@@ -316,7 +316,7 @@ footer a {
     margin-top: 10px;
     display: inline-block;
     align-self: center;
-    text-align: center;
+    text-align: left;
   }
 
   .btn-call {
